@@ -4,16 +4,6 @@
 after_bundler do
   
   say_wizard "AddUser recipe running 'after bundler'"
-  
-  if recipes.include? 'omniauth'
-    generate(:model, "user provider:string uid:string name:string email:string")
-    gsub_file 'app/models/user.rb', /\bend\s*\Z/ do
-<<-RUBY
-  attr_accessible :provider, :uid, :name, :email
-end
-RUBY
-    end
-  end
 
   if recipes.include? 'devise'
 
