@@ -42,16 +42,8 @@ RUBY
     route "match '/auth/:provider/callback' => 'sessions#create'"
     route "resources :users, :only => [ :show, :edit, :update ]"
 
-    # add a user model (unless another recipe did so already)
-    unless recipes.include? 'add_user'
-      generate(:model, "user provider:string uid:string name:string email:string")
-      gsub_file 'app/models/user.rb', /\bend\s*\Z/ do
-<<-RUBY
-  attr_accessible :provider, :uid, :name, :email
-end
-RUBY
-      end
-    end
+    # generate the user model
+    generate(:model, "user provider:string uid:string name:string email:string")
 
     # modify the user model
     inject_into_file 'app/models/user.rb', :before => 'end' do <<-RUBY
