@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.5.4"
+  VERSION = "1.5.5"
 end
